# nugget

./: index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  CartoonEyes.tsx  Eye.ts  VoiceChat.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
